--- a/Forms/DAgenda.Forms.Main.fmx
+++ b/Forms/DAgenda.Forms.Main.fmx
@@ -88,7 +88,7 @@ object MainForm: TMainForm
       ExplicitSize.cx = 160.000000000000000000
       ExplicitSize.cy = 49.000000000000000000
       object tbContactsManager: TToolBar
-        Size.Width = 50.000000000000000000
+        Size.Width = 320.000000000000000000
         Size.Height = 48.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
@@ -111,7 +111,7 @@ object MainForm: TMainForm
           Enabled = True
           ImageIndex = -1
           Margins.Right = 8.000000000000000000
-          Position.X = -62.000000000000000000
+          Position.X = 208.000000000000000000
           Size.Width = 48.000000000000000000
           Size.Height = 48.000000000000000000
           Size.PlatformDefault = False
@@ -124,7 +124,7 @@ object MainForm: TMainForm
           Enabled = True
           ImageIndex = -1
           Margins.Right = 8.000000000000000000
-          Position.X = -6.000000000000000000
+          Position.X = 264.000000000000000000
           Size.Width = 48.000000000000000000
           Size.Height = 48.000000000000000000
           Size.PlatformDefault = False
@@ -134,7 +134,7 @@ object MainForm: TMainForm
         object lblContactsManagerTitle: TLabel
           Align = Contents
           AutoSize = True
-          Size.Width = 50.000000000000000000
+          Size.Width = 320.000000000000000000
           Size.Height = 48.000000000000000000
           Size.PlatformDefault = False
           TextSettings.HorzAlign = Center
@@ -144,14 +144,14 @@ object MainForm: TMainForm
       end
       object lytContactsManager: TLayout
         Align = Client
-        Size.Width = 50.000000000000000000
-        Size.Height = 2.000000000000000000
+        Size.Width = 320.000000000000000000
+        Size.Height = 383.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 1
         object lbMain: TListBox
           Align = Client
-          Size.Width = 50.000000000000000000
-          Size.Height = 2.000000000000000000
+          Size.Width = 320.000000000000000000
+          Size.Height = 383.000000000000000000
           Size.PlatformDefault = False
           StyleLookup = 'transparentlistboxstyle'
           TabOrder = 0
@@ -159,11 +159,11 @@ object MainForm: TMainForm
           DefaultItemStyles.ItemStyle = ''
           DefaultItemStyles.GroupHeaderStyle = ''
           DefaultItemStyles.GroupFooterStyle = ''
-          Viewport.Width = 45.000000000000000000
-          Viewport.Height = 2.000000000000000000
+          Viewport.Width = 320.000000000000000000
+          Viewport.Height = 383.000000000000000000
           object lbghNome: TListBoxGroupHeader
             Selectable = False
-            Size.Width = 45.000000000000000000
+            Size.Width = 320.000000000000000000
             Size.Height = 30.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 0
@@ -182,7 +182,7 @@ object MainForm: TMainForm
           object lbiNome: TListBoxItem
             Selectable = False
             Position.Y = 30.000000000000000000
-            Size.Width = 45.000000000000000000
+            Size.Width = 320.000000000000000000
             Size.Height = 44.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 1
@@ -190,19 +190,20 @@ object MainForm: TMainForm
               Touch.InteractiveGestures = [LongTap, DoubleTap]
               Anchors = [akLeft, akTop, akRight]
               TabOrder = 0
+              MaxLength = 40
               Position.X = 8.000000000000000000
               Position.Y = 8.000000000000000000
               Margins.Left = 8.000000000000000000
               Margins.Top = 8.000000000000000000
               Margins.Right = 8.000000000000000000
-              Size.Width = 29.000000000000000000
+              Size.Width = 304.000000000000000000
               Size.Height = 32.000000000000000000
               Size.PlatformDefault = False
             end
           end
           object lbghEmail: TListBoxGroupHeader
             Position.Y = 74.000000000000000000
-            Size.Width = 45.000000000000000000
+            Size.Width = 320.000000000000000000
             Size.Height = 30.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 2
@@ -211,7 +212,7 @@ object MainForm: TMainForm
           object lbiEmail: TListBoxItem
             Selectable = False
             Position.Y = 104.000000000000000000
-            Size.Width = 45.000000000000000000
+            Size.Width = 320.000000000000000000
             Size.Height = 44.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 3
@@ -220,19 +221,20 @@ object MainForm: TMainForm
               Anchors = [akLeft, akTop, akRight]
               TabOrder = 0
               KeyboardType = EmailAddress
+              MaxLength = 40
               Position.X = 8.000000000000000000
               Position.Y = 8.000000000000000000
               Margins.Left = 8.000000000000000000
               Margins.Top = 8.000000000000000000
               Margins.Right = 8.000000000000000000
-              Size.Width = 29.000000000000000000
+              Size.Width = 304.000000000000000000
               Size.Height = 32.000000000000000000
               Size.PlatformDefault = False
             end
           end
           object lbghTelefone: TListBoxGroupHeader
             Position.Y = 148.000000000000000000
-            Size.Width = 45.000000000000000000
+            Size.Width = 320.000000000000000000
             Size.Height = 30.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 4
@@ -241,7 +243,7 @@ object MainForm: TMainForm
           object lbiTelefone: TListBoxItem
             Selectable = False
             Position.Y = 178.000000000000000000
-            Size.Width = 45.000000000000000000
+            Size.Width = 320.000000000000000000
             Size.Height = 44.000000000000000000
             Size.PlatformDefault = False
             TabOrder = 5
@@ -250,12 +252,13 @@ object MainForm: TMainForm
               Anchors = [akLeft, akTop, akRight]
               TabOrder = 0
               KeyboardType = NumberPad
+              MaxLength = 12
               Position.X = 8.000000000000000000
               Position.Y = 8.000000000000000000
               Margins.Left = 8.000000000000000000
               Margins.Top = 8.000000000000000000
               Margins.Right = 8.000000000000000000
-              Size.Width = 29.000000000000000000
+              Size.Width = 304.000000000000000000
               Size.Height = 32.000000000000000000
               Size.PlatformDefault = False
             end
